crates/carta/tests/snapshots/golden_e2e__rst__mediawiki__substitutions.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
The <span>Example Project</span> toolkit is documented online.
