crates/carta/tests/snapshots/golden_e2e__rst__mediawiki__table-directive-caption.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|+ A captioned table
|-
! Name
! Age
|-
| Alice
| 30
|-
| Bob
| 25
|}
