crates/carta/tests/snapshots/golden_e2e__rst__mediawiki__tables-grid.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
! Fruit
! Color
|-
| Apple
| Red
|-
| Lemon
| Yellow
|}
