crates/carta/tests/snapshots/golden_e2e__rst__mediawiki__tables-simple.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{| class="wikitable"
|-
! Name
! Score
|-
| Alice
| 90
|-
| Bob
| 75
|}
