crates/carta/tests/snapshots/golden_e2e__rst__mediawiki__target-uri-escaping.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A [http://example.com/a%20path named] link and an [http://example.com/another%20path anonymous] link whose destinations contain spaces.
